--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p class="paragraph-1">Это параграф 1</p>
     <p class="paragraph-2">Это параграф 2</p>
     <p class="paragraph-3">Это параграф 3</p>
-    <img src="C:\Users\Влад\Downloads\evropejskaya-koshka-dikij-kot-morda-vzglyad.jpg" width="600" height="450">
+    <img src="https://kartinkof.club/uploads/posts/2022-03/1648343999_36-kartinkof-club-p-mem-podozrenie-37.jpg" width="600" height="450">
     <p class="paragraph-4" align="center"> Phasellus nec ultrices massa, vitae volutpat orci. Aenean dapibus, enim tincidunt porttitor euismod, lectus lacus dictum risus, commodo laoreet nulla massa id lacus.</p>
 
 </body>
